--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
     "css": "^3.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
